# Task_2_and_3_12

./: CMakeLists.txt  Factory.cpp  Factory.h  README.md  autotest.cpp  autotest.hpp  cstring.cpp  cstring.hpp  cstring0.cpp  cstring0.hpp  cstring1.cpp  cstring1.hpp  input.txt  main.cpp  string0.txt  string1.txt
